src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-app-service
spec:
  selector:
    app: message-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
